@@ -41,8 +41,6 @@ Server:
    running the command, specifying an argument to pass on standard input
    (see below), or supporting things like LDAP ACLs.
 
- * Support arguments contain nul characters.
-
  * Maximum argument count and maximum data size in MESSAGE_COMMAND should
    be configurable parameters of the server rather than hard-coded
    values.  This may need to wait for better configuration parsing.
