@@ -203,9 +203,10 @@ except the I<command> and possibly the I<subcommand>, nothing will be
 passed on standard input.
 
 This option is used primarily for passing large amounts of data that may
-not fit on the command line.  It can also be used for arguments like
-passwords that shouldn't be exposed on the command line.  Only at most one
-argument may be passed on standard input to the command.
+not fit on the command line or data that contains nul characters.  It can
+also be used for arguments like passwords that shouldn't be exposed on the
+command line.  Only at most one argument may be passed on standard input
+to the command.
 
 =back
 
@@ -405,6 +406,12 @@ B<remctld> does not itself impose any limits on the number of child
 processes or other system resources.  You may want to set resource limits
 in your inetd server or with B<ulimit> when running it as a standalone
 daemon or under B<tcpserver>.
+
+Command arguments may not contain nul characters and must be shorter than
+the operating system limit on the length of a command line since they're
+passed to the command as command-line arguments.  The exception is an
+argument passed via standard input using the C<stdin=> option in the
+configuration file.  At most one argument may be passed that way.
 
 =head1 NOTES
 
